# KnVnMSwitch

./: .gitignore  README.md
KnVnM_DeviceMac/: KeyConvMac.ino
KnVnM_DeviceWin/: KeyConvWin.ino  KnVnM_DeviceWin.ino
KnVnM_Host/: CMakeLists.txt  build.sh
KnVnM_Host/src/: CMakeLists.txt  KnVnM.h  hid_app.c  main.c
